Try to fix z-index

--- a/styles.css
+++ b/styles.css
@@ -376,6 +376,7 @@ ul.people {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    z-index: -1;
 }
 
 @media only screen and (max-width: 800px) {
